fix: [#2] fixing home path and wrap navbar into routes

--- a/src/components/Navbar/NavBar.css
+++ b/src/components/Navbar/NavBar.css
@@ -22,27 +22,27 @@
 	height: 100%;
 }
 
-.radio-item {
+.radio-item-navbar {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding: 8px 16px;
+	border-radius: 6px;
+	font-size: 16px;
+	font-weight: 500;
+	color: black;
+	text-decoration: none;
+	transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.radio-item input {
-	display: none;
-}
-
-.radio-item label {
-	cursor: pointer;
-	transition: color 0.3s ease;
-}
-
-.radio-item input:checked + label {
-	color: #35b8be;
-}
-
-.radio-item label:hover {
+.radio-item-navbar:hover {
 	color: #0056b3;
+	background-color: #f2f2f2;
+}
+
+.radio-item-navbar.active {
+	color: #35b8be;
+	font-weight: 600;
 }
 
 .navigation button {
@@ -58,7 +58,7 @@
 .number-of-selected-products {
 	position: absolute;
 	top: 12px;
-	right: 112px;
+	right: 111px;
 	width: 20px;
 	height: 20px;
 	border-radius: 50%;
